--- a/index.html
+++ b/index.html
@@ -551,16 +551,16 @@ I am a designer and photographer focused on UX/UI, graphic design, and visual ex
 <section id="project1-details" class="project-details">
 <h1>Project 1 - Details</h1>
 <div class="grid-container">
-<img src="img_2598.jpg" alt="Arquitetura moderna" loading="lazy">
-<img src="img_2642.jpg" alt="Prédios históricos e modernos" loading="lazy">
-<img src="img_2538.jpg" alt="Mar e céu azul" loading="lazy">
-<img src="img_2195.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2267.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2323.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2334.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2650.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2674.jpg" alt="Vista panorâmica urbana" loading="lazy">
-<img src="img_2679.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2598.jpg" alt="Arquitetura moderna" loading="lazy">
+<img src="IMG_2642.jpg" alt="Prédios históricos e modernos" loading="lazy">
+<img src="IMG_2538.jpg" alt="Mar e céu azul" loading="lazy">
+<img src="IMG_2195.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2267.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2323.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2334.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2650.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2674.jpg" alt="Vista panorâmica urbana" loading="lazy">
+<img src="IMG_2679.jpg" alt="Vista panorâmica urbana" loading="lazy">
 </div>
 <span class="button back-button" onclick="showMain()">Back to Portfolio</span>
 </section>
@@ -569,8 +569,8 @@ I am a designer and photographer focused on UX/UI, graphic design, and visual ex
 <section id="project2-details" class="project-details">
 <h1>Project 2 - Details</h1>
 <div class="grid-container">
-<img src="img_3847.jpg" alt="Carlos Barbosa - Foto 1" loading="lazy">
-<img src="img_0298.jpg" alt="Carlos Barbosa - Foto 2" loading="lazy">
+<img src="IMG_3847.jpg" alt="Carlos Barbosa - Foto 1" loading="lazy">
+<img src="IMG_0298.jpg" alt="Carlos Barbosa - Foto 2" loading="lazy">
 </div>
 <span class="button back-button" onclick="showMain()">Back to Portfolio</span>
 </section>
@@ -629,3 +629,4 @@ darkIcon.innerHTML = '<circle cx="12" cy="12" r="10" stroke="#111" stroke-width=
 
 </body>
 </html>
+
